--- a/agag.html
+++ b/agag.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h1> 你猜不着 </h1>
-<h1> 你猜不着 </h1>
-<h1> 你猜不着 </h1>
-<h1> 你猜不着 </h1>
-<p> {{username}}</p>
+<p><a href=" www.baidu.com"></a></p>
 </body>
 </html>
